tests/specs/npm/workspace_basic/b/exports-sub-path-not-exists.ts
import * as a from "@denotest/a/non-existent";
console.log(a);
